Lego 1464 dropdown søk (#723)
* update yarn lock, yarnrc lint & reactexample with dropdown

* inital update to dropdown, now has autocomplete functionality

* fixed erros

* first working draft of autocomplete in dropdown

* new prop-types & yarn lock

* Cleanup, update package version & changelog for dropdown

* small update in changelog

* remove duplicate interface for dropdown option

* Update and fix doc for dropdown

* Fix sonarcloud issues

* Updated example data for dropdown options

* Updates after QA

* updated documentation for dropdown after QA

* Updates after QA

--- a/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
@@ -13,47 +13,9 @@
   <!--SIZE-->
   <app-component-section [sectionTitle]="'Size'">
     <ng-container ngProjectAs="sectionContent">
-      <app-component-subsection [sectionTitle]="'Normal'">
-        <ng-container ngProjectAs="sectionContent">
-          <div style="width: 250px">
-            <elvia-dropdown
-              [options]="exampleOptions"
-              placeholder="Placeholder"
-              label="Label"
-            ></elvia-dropdown>
-          </div>
-        </ng-container>
-      </app-component-subsection>
-      <app-component-subsection [sectionTitle]="'Compact'">
-        <ng-container ngProjectAs="sectionContent">
-          <div style="width: 250px">
-            <elvia-dropdown
-              [options]="exampleOptions"
-              placeholder="Placeholder"
-              label="Label"
-              [isCompact]="isCompact"
-            ></elvia-dropdown>
-          </div>
-        </ng-container>
-      </app-component-subsection>
-    </ng-container>
-  </app-component-section>
-
-  <!--OPTIONS-->
-  <app-component-section [sectionTitle]="'Options'">
-    <ng-container ngProjectAs="sectionContent">
-      <app-component-subsection [sectionTitle]="'Multiselect'">
-        <ng-container ngProjectAs="sectionContent">
-          <div style="width: 250px">
-            <elvia-dropdown
-              [options]="exampleOptions"
-              placeholder="Placeholder"
-              label="Label"
-              [isMulti]="isMulti"
-            ></elvia-dropdown>
-          </div>
-        </ng-container>
-      </app-component-subsection>
+      There are two different sizes of dropdown; normal and compact. Much like compact text fields, the
+      compact dropdown is a version of the text field that’s primarily designed for internal systems, and
+      shouldn’t be mixed with the other input style.
     </ng-container>
   </app-component-section>
 
