--- a/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.html
@@ -19,7 +19,7 @@
         <ng-container ngProjectAs="sectionContent">
           The breadcrumb should start with home (landing page) and end with the current page. All pages
           besides the current page are a link. The breadcrumb is hidden until you have two levels (no
-          breadcrumb are visible on the homepage).
+          breadcrumbs are visible on the homepage).
           <div class="breadcrumb-levels">
             <img
               alt="breadcrumb-levels on desktop"
