--- a/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.html
@@ -40,8 +40,8 @@
       </app-component-subsection>
       <app-component-subsection [sectionTitle]="'Breadcrumb vs backlink'">
         <ng-container ngProjectAs="sectionContent">
-          Breadcrumb is a great way to reveal the user’s location and makes it easier to navigate and find
-          what they are looking for. But it’s not necessary to use breadcrumbs for single-level pages with no
+          Breadcrumb is a great way to reveal the user's location and makes it easier to navigate and find
+          what they are looking for. But it's not necessary to use breadcrumbs for single-level pages with no
           more than one parent category. Backlink can then be used to navigate the user back to home.
         </ng-container>
       </app-component-subsection>
