--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
@@ -13,7 +13,7 @@
         <th class="changelog-date py-0" scope="col">Date and version</th>
         <th class="changelog-content py-0" scope="col">Changes</th>
       </tr>
-      <tr class="changelog-row" *ngFor="let el of componentData.changelog">
+      <tr class="changelog-row changelog-divider py-5" *ngFor="let el of componentData.changelog">
         <td class="changelog-date">
           <span class="e-title-sm">{{ el.version }}</span>
           <br />
@@ -26,7 +26,6 @@
               <li *ngFor="let change of changelog.changes">{{ change }}</li>
             </ul>
           </div>
-          <div class="changelog-divider"></div>
         </td>
       </tr>
     </table>
