--- a/packages/web/src/styles.scss
+++ b/packages/web/src/styles.scss
@@ -204,16 +204,9 @@ p {
     flex-direction: column;
   }
 }
-.changelog-row + .changelog-row {
-  .changelog-content,
-  .changelog-date {
-    padding-top: 48px;
-  }
-}
+
 .changelog-date {
   vertical-align: top;
-  padding-bottom: 48px;
-  //padding-top: 48px;
   padding-right: 24px;
   width: 27%;
   display: flex;
@@ -240,8 +233,8 @@ p {
   width: 75%;
   @include breakpoint-up(Mobile) {
     width: 100%;
-    padding-top: 0px;
-    margin-top: -20px;
+    //padding-top: 0px;
+    //margin-top: -20px;
   }
 
   .changelog-section:not(:first-of-type) {
@@ -258,17 +251,9 @@ p {
     font-size: 14px !important;
     line-height: 21px !important;
   }
-  .changelog-divider {
-    height: 1px;
-    width: 138.7%;
-    margin-left: -33.7%;
-    background: var(--e-grey-10);
-    margin-top: 48px;
-    @include breakpoint-up(Mobile) {
-      width: 100%;
-      margin-left: 0px;
-    }
-  }
+}
+.changelog-divider {
+  border-bottom: 1px solid var(--e-grey-10);
 }
 
 // Display examples
