Hide instead of hide all

--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
@@ -2,7 +2,7 @@
   type="overflow"
   overflowHeight="500"
   [openLabel]="'Show all'"
-  [closeLabel]="'Hide all'"
+  [closeLabel]="'Hide'"
   [labelPosition]="'right'"
   [size]="'small'"
 >
