--- a/packages/web/src/app/doc-pages/components/popover-doc/popover-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/popover-doc/popover-doc.component.html
@@ -9,11 +9,7 @@
 <!--BODY-->
 <div class="page-body e-mt-72">
   <!--CEG-->
-  <app-component-example-generator
-    [componentData]="componentData"
-    [typesData]="typesData"
-    [typePropExists]="true"
-  ></app-component-example-generator>
+  <app-component-example-generator [componentData]="componentData"></app-component-example-generator>
 
   <!--TYPE-->
   <app-component-section [sectionTitle]="'Type'">
@@ -69,7 +65,7 @@
         </ng-container>
       </app-component-subsection>
 
-      <app-component-subsection [sectionTitle]="'List'">
+      <!-- <app-component-subsection [sectionTitle]="'List'">
         <ng-container ngProjectAs="sectionContent">
           A list of actions in a popover that often are used together with a more-menu icon button. This can
           be used when the space is limited or when you want to group actions. Popover closes immediately
@@ -122,7 +118,7 @@
             </ng-container>
           </app-component-subsubsection>
         </ng-container>
-      </app-component-subsection>
+      </app-component-subsection> -->
     </ng-container>
   </app-component-section>
 
