--- a/packages/web/src/app/doc-pages/components/popover-doc/popover-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/popover-doc/popover-doc.component.html
@@ -24,6 +24,7 @@
             *ngIf="!loadedPopoverStructure"
           ></div>
           <img
+            alt="Informative popover structure"
             src="./../../../../assets/popover/Group 2791.svg"
             class="usage-image-desktop e-w-100 responsive-height"
             (load)="hideContentLoader($event)"
@@ -71,6 +72,7 @@
           be used when the space is limited or when you want to group actions. Popover closes immediately
           after selecting action or clicking outside.
           <img
+            alt="List popover structure"
             src="./../../../../assets/popover/Popover list example.svg"
             class="usage-image-desktop e-w-100 e-mt-40"
           />
