add select all button to dropdown

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,7 +5,18 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white"></div>
+    <div class="e-bg-white">
+      <h3>Dropdown</h3>
+      <elvia-dropdown
+        [isMulti]="true"
+        [isCompact]="false"
+        [isDisabled]="false"
+        [hasSelectAll]="true"
+        label="Dropdown with select all"
+        [defaultValue]="dropdownDefOptions"
+        [options]="dropdownOptions"
+      ></elvia-dropdown>
+    </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
