rename prop hasSelectAllOption, fix React bug

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -11,7 +11,7 @@
         [isMulti]="true"
         [isCompact]="false"
         [isDisabled]="false"
-        [hasSelectAll]="true"
+        [hasSelectAllOption]="true"
         label="Dropdown with select all"
         [options]="dropdownOptions"
       ></elvia-dropdown>
