WIP elvis changelog

--- a/packages/web/src/app/doc-pages/other-pages/changelog/changelog.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/changelog/changelog.component.html
@@ -8,5 +8,5 @@
 
 <!--BODY-->
 <div class="page-body">
-  <div class="documentation-section-animation e-mt-24" markdown [src]="'assets/elvis/CHANGELOG.md'"></div>
+  <app-component-changelog [componentData]="componentData"></app-component-changelog>
 </div>
