--- a/packages/web/src/app/shell/home/home.component.html
+++ b/packages/web/src/app/shell/home/home.component.html
@@ -123,7 +123,10 @@
       <div class="home-whats-new">
         <div class="e-title-md e-mb-56" style="display: flex; justify-content: center">What's new?</div>
         <div>
-          <div class="e-mt-n48" style="padding-top: 0px" markdown [src]="'assets/elvis/CHANGELOG.md'"></div>
+          <!-- <div class="e-mt-n48" style="padding-top: 0px" markdown [src]="'assets/changelogs/elvis/CHANGELOG.md'"></div> -->
+          <!--CHANGELOG-->
+
+          <app-component-changelog [componentData]="componentData"></app-component-changelog>
         </div>
         <div class="e-mt-48" style="display: flex; justify-content: center">
           <a class="e-link e-link--action" [routerLink]="['/about/whats-new']">
