--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,17 +5,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <h3>Dropdown</h3>
-      <elvia-dropdown
-        [isMulti]="true"
-        [isCompact]="false"
-        [isDisabled]="false"
-        [hasSelectAllOption]="true"
-        label="Dropdown with select all"
-        [options]="dropdownOptions"
-      ></elvia-dropdown>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
