Table - Aria labels

--- a/packages/elvis/percy/components/table.html
+++ b/packages/elvis/percy/components/table.html
@@ -10,7 +10,7 @@
     <div class="e-title-sm e-mt-16">Table</div>
     <div class="e-title-xs e-my-16">Normal</div>
     <div class="e-table-container">
-      <table class="e-table">
+      <table class="e-table" aria-label="Beskrivelse av tabellen">
         <thead>
           <tr>
             <th scope="col">Periode</th>
@@ -214,7 +214,7 @@
     <div class="e-title-xs e-my-16">Sorting</div>
 
     <div class="e-table-container">
-      <table class="e-table">
+      <table class="e-table" aria-label="Beskrivelse av tabellen">
         <thead>
           <tr>
             <th scope="col" class="e-table__sort-header">
