--- a/packages/web/src/app/doc-pages/components/header-doc/header-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/header-doc/header-doc.component.html
@@ -97,7 +97,7 @@
         <ng-container ngProjectAs="sectionContent">
           To open a menu in the top-bar one or more of the following classes needs to be added.
           <div class="e-table-container e-mt-16">
-            <table class="e-table">
+            <table class="e-table" aria-label="Classes for showing and hiding header elements">
               <thead>
                 <tr>
                   <th scope="col">New class</th>
