--- a/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
@@ -271,7 +271,7 @@
           tablet and 6 on mobile.
 
           <div class="e-table-container e-mt-24">
-            <table class="e-table">
+            <table class="e-table" aria-label="Beskrivelse av tabellen">
               <thead>
                 <tr>
                   <th scope="col">Device</th>
