--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
@@ -1,5 +1,9 @@
 <div class="e-table-container desktop">
-  <table class="e-table e-table--compact" *ngIf="componentProps">
+  <table
+    class="e-table e-table--compact"
+    *ngIf="componentProps"
+    aria-label="Properties details and descriptions"
+  >
     <thead>
       <tr>
         <th scope="col">Prop</th>
