--- a/packages/elvis/src/components/table.scss
+++ b/packages/elvis/src/components/table.scss
@@ -13,7 +13,7 @@ $table-header-compact-height: 40px;
 $grey10: colors.color('grey-10');
 
 %header-style {
-  background: colors.color('elvia-on');
+  background: colors.color('white');
   width: 100%;
   th {
     color: colors.color('font-color');
@@ -44,7 +44,6 @@ $grey10: colors.color('grey-10');
   text-align: left;
   width: 100%;
   box-sizing: border-box;
-  background: colors.color('elvia-on');
   white-space: nowrap;
 
   // No spacing between table and container
@@ -71,6 +70,7 @@ $grey10: colors.color('grey-10');
     @include typography.typography('text-description');
     text-align: left;
     padding: $table-padding;
+    background: colors.color('white');
     &.e-table__cell--multiline {
       display: inline-block;
       white-space: pre-wrap;
@@ -87,7 +87,8 @@ $grey10: colors.color('grey-10');
   }
 
   tbody {
-    tr:nth-of-type(odd) {
+    tr:nth-of-type(odd) th,
+    tr:nth-of-type(odd) td {
       background: colors.color('grey-05');
     }
   }
@@ -112,6 +113,23 @@ $grey10: colors.color('grey-10');
       @include typography.typography('text-info');
       padding: $table-compact-padding;
       line-height: 21px;
+    }
+  }
+
+  &.e-table--sticky-header {
+    thead {
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+  }
+  &.e-table--sticky-column-header {
+    thead th:first-of-type,
+    th[scope='row'] {
+      position: sticky;
+      left: 0;
+      z-index: 1;
+      border-right: 1px solid colors.color('grey-10');
     }
   }
 }
