--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -6462,6 +6462,10 @@ input:focus {
   border-right: 1px solid #e9e9e9;
 }
 
+.e-table-container .e-table-mobile {
+  box-shadow: none;
+}
+
 .e-table-mobile {
   display: table;
   table-layout: auto;
@@ -6471,6 +6475,7 @@ input:focus {
   border-spacing: 0;
   box-shadow: 0 0 0 1px #e9e9e9;
   background: #fff;
+  position: relative;
 }
 .e-table-mobile thead tr {
   height: 56px;
@@ -6570,6 +6575,18 @@ input:focus {
   text-transform: unset;
   color: inherit;
 }
+.e-table-mobile.e-table-mobile--sticky-header {
+  overflow: auto;
+}
+.e-table-mobile.e-table-mobile--sticky-header tbody {
+  position: relative;
+}
+.e-table-mobile.e-table-mobile--sticky-header tbody tr:first-of-type {
+  position: sticky;
+  z-index: 10;
+  top: 0px;
+}
+
 .e-table .e-text-mono,
 .e-table-mobile .e-text-mono {
   font-family: "Red Hat Mono", Verdana, sans-serif !important;
