--- a/packages/elvis/src/components/table.scss
+++ b/packages/elvis/src/components/table.scss
@@ -135,6 +135,9 @@ $grey10: colors.color('grey-10');
 }
 
 // TABLE MOBILE
+.e-table-container .e-table-mobile {
+  box-shadow: none;
+}
 .e-table-mobile {
   display: table;
   table-layout: auto;
@@ -144,6 +147,7 @@ $grey10: colors.color('grey-10');
   border-spacing: 0;
   box-shadow: 0 0 0 1px $grey10;
   background: colors.color('elvia-on');
+  position: relative;
 
   thead {
     tr {
@@ -213,6 +217,18 @@ $grey10: colors.color('grey-10');
     }
     tbody tr:first-of-type th {
       @include typography.typography('text-sm-strong');
+    }
+  }
+
+  &.e-table-mobile--sticky-header {
+    overflow: auto;
+    tbody {
+      position: relative;
+      tr:first-of-type {
+        position: sticky;
+        z-index: 10;
+        top: 0px;
+      }
     }
   }
 }
