--- a/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.html
@@ -336,7 +336,7 @@
           </div>
           <div class="e-accordion__content">
             <div>
-              Sticky headers should primarly be used when there is a lot of information to scroll through, so
+              Sticky headers should primarily be used when there is a lot of information to scroll through, so
               that the user can view the context at all times when scrolling. Optional sticky headers for both
               horizontal and vertical scroll. You can choose to have either row headers sticky, column headers
               sticky or both.
@@ -344,8 +344,7 @@
             <app-component-subsubsection [sectionTitle]="'Desktop'">
               <ng-container ngProjectAs="sectionContent">
                 <h5 class="e-title-caps">Row header</h5>
-                The first column will be sticky on the left side including the linked column header and the
-                right side will have a fade to make it clear the user can scroll.
+                The first column will be sticky on the left side including the linked column header.
                 <app-component-example-v1 [codeHTML]="exampleStickyHeader"></app-component-example-v1>
 
                 <h5 class="e-title-caps e-mt-40">Column header</h5>
