--- a/packages/elvis/src/components/table.scss
+++ b/packages/elvis/src/components/table.scss
@@ -13,7 +13,7 @@ $table-header-compact-height: 40px;
 $grey10: colors.color('grey-10');
 
 %header-style {
-  background: colors.color('elvia-on');
+  background: colors.color('white');
   width: 100%;
   th {
     color: colors.color('font-color');
@@ -44,7 +44,6 @@ $grey10: colors.color('grey-10');
   text-align: left;
   width: 100%;
   box-sizing: border-box;
-  background: colors.color('elvia-on');
   white-space: nowrap;
 
   // No spacing between table and container
@@ -71,6 +70,7 @@ $grey10: colors.color('grey-10');
     @include typography.typography('text-description');
     text-align: left;
     padding: $table-padding;
+    background: colors.color('white');
     &.e-table__cell--multiline {
       display: inline-block;
       white-space: pre-wrap;
@@ -87,7 +87,8 @@ $grey10: colors.color('grey-10');
   }
 
   tbody {
-    tr:nth-of-type(odd) {
+    tr:nth-of-type(odd) th,
+    tr:nth-of-type(odd) td {
       background: colors.color('grey-05');
     }
   }
@@ -114,9 +115,29 @@ $grey10: colors.color('grey-10');
       line-height: 21px;
     }
   }
+
+  &.e-table--sticky-header {
+    thead {
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+  }
+  &.e-table--sticky-column-header {
+    thead th:first-of-type,
+    th[scope='row'] {
+      position: sticky;
+      left: 0;
+      z-index: 1;
+      border-right: 1px solid colors.color('grey-10');
+    }
+  }
 }
 
 // TABLE MOBILE
+.e-table-container .e-table-mobile {
+  box-shadow: none;
+}
 .e-table-mobile {
   display: table;
   table-layout: auto;
@@ -126,6 +147,7 @@ $grey10: colors.color('grey-10');
   border-spacing: 0;
   box-shadow: 0 0 0 1px $grey10;
   background: colors.color('elvia-on');
+  position: relative;
 
   thead {
     tr {
@@ -195,6 +217,18 @@ $grey10: colors.color('grey-10');
     }
     tbody tr:first-of-type th {
       @include typography.typography('text-sm-strong');
+    }
+  }
+
+  &.e-table-mobile--sticky-header {
+    overflow: auto;
+    tbody {
+      position: relative;
+      tr:first-of-type {
+        position: sticky;
+        z-index: 10;
+        top: 0px;
+      }
     }
   }
 }
