--- a/packages/elvis/src/components/link.scss
+++ b/packages/elvis/src/components/link.scss
@@ -33,6 +33,8 @@ $grey-ten: colors.color('grey-10');
   box-sizing: border-box;
   border-bottom: 2px solid colors.color('elvia-off');
   cursor: pointer;
+
+  font-family: 'Red Hat Display', Verdana, sans-serif;
   color: colors.color('font-color');
   text-align: inherit;
   position: relative;
