--- a/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
@@ -10,7 +10,7 @@
 <div class="page-body">
   <app-component-example-generator [componentData]="componentData"></app-component-example-generator>
 
-  <!--Options-->
+  <!--OPTIONS-->
   <app-component-section [sectionTitle]="'Options'">
     <ng-container ngProjectAs="sectionContent">
       <app-component-subsection [sectionTitle]="'Icons'">
