updated properties table with max height and sticky table header on mobile

--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
@@ -26,8 +26,8 @@
     </tbody>
   </table>
 </div>
-<div class="e-table-container mobile">
-  <table class="e-table-mobile e-table-mobile--compact">
+<div class="e-table-container mobile properties-mobile">
+  <table class="e-table-mobile e-table-mobile--sticky-header e-table-mobile--compact">
     <thead>
       <tr>
         <th class="e-table-mobile__cell" scope="col">Prop</th>
