--- a/packages/elvis/src/utilities/sizing.scss
+++ b/packages/elvis/src/utilities/sizing.scss
@@ -10,3 +10,22 @@
 .e-w-25 {
   width: 25% !important;
 }
+.e-w-0 {
+  width: 0 !important;
+}
+
+.e-h-100 {
+  height: 100% !important;
+}
+.e-h-75 {
+  height: 75% !important;
+}
+.e-h-50 {
+  height: 50% !important;
+}
+.e-h-25 {
+  height: 25% !important;
+}
+.e-h-0 {
+  height: 0 !important;
+}
