--- a/packages/elvis/src/utilities/visibility.scss
+++ b/packages/elvis/src/utilities/visibility.scss
@@ -10,12 +10,12 @@
   }
 }
 .e-invisible-lg {
-  @media (max-width: breakpoints.$mindesktop-max) and (min-width: breakpoints.$tablet-max + 1) {
+  @media (max-width: breakpoints.$mindesktop-max) and (min-width: (breakpoints.$tablet-max + 1)) {
     visibility: hidden !important;
   }
 }
 .e-invisible-md {
-  @media (max-width: breakpoints.$tablet-max) and (min-width: breakpoints.$mobile-max + 1) {
+  @media (max-width: breakpoints.$tablet-max) and (min-width: (breakpoints.$mobile-max + 1)) {
     visibility: hidden !important;
   }
 }
@@ -23,4 +23,9 @@
   @media (max-width: breakpoints.$mobile-max) {
     visibility: hidden !important;
   }
+}
+
+.e-hide {
+  height: 0;
+  overflow: hidden;
 }
