--- a/packages/web/src/app/doc-pages/other-pages/utilities-doc/utilities-doc.component.scss
+++ b/packages/web/src/app/doc-pages/other-pages/utilities-doc/utilities-doc.component.scss
@@ -5,9 +5,15 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  h3 {
+    margin: 0;
+  }
 
   @include breakpoint-up(Tablet) {
     flex-direction: column;
+    h3 {
+      margin-bottom: 24px;
+    }
   }
 }
 
