Chip - Accessiblity fixes

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -112,6 +112,7 @@
           [ariaLabel]="'Fjern filtrering for ' + chip.value"
           [disabled]="chip.disabled"
           (onDelete)="handleOnDelete($event.detail.value)"
+          [inlineStyle]="{ margin: '8px' }"
         ></elvia-chip>
       </div>
     </div>
