--- a/packages/web/src/app/doc-pages/components/chip-doc/chip-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/chip-doc/chip-doc.component.html
@@ -8,23 +8,7 @@
 
 <!--BODY-->
 <div class="page-body">
-  <!--TEMPORARY WAY TO SHOW LIVE EXAMPLES BEFORE CODE-GENERATOR-->
-  <!-- <div class="component-preview-temp component-preview-animation v2"> -->
-  <!-- <div class="component-preview-temp-example">
-      <div style="display: flex; flex-direction: row">
-        <div *ngFor="let chip of deletableChipsList" class="e-m-8">
-          <elvia-chip
-            [value]="chip.value"
-            [color]="chip.color"
-            [ariaLabel]="'Fjern filtrering for ' + chip.value"
-            [disabled]="chip.disabled"
-            (onDelete)="handleOnDelete($event.detail.value)"
-          ></elvia-chip>
-        </div>
-      </div>
-    </div> -->
   <app-component-example-generator [componentData]="componentData"></app-component-example-generator>
-  <!-- </div> -->
 
   <!-- TYPE -->
   <app-component-section [sectionTitle]="'Type'">
@@ -168,6 +152,23 @@
   <app-component-section [sectionTitle]="'Usage'">
     <ng-container ngProjectAs="sectionContent">
       <app-when-to-use [whens]="does" [whenNots]="donts"></app-when-to-use>
+    </ng-container>
+  </app-component-section>
+
+  <!--IMPLEMENTATION-->
+  <app-component-section [sectionTitle]="'Implementation'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-subsection [sectionTitle]="'Accessibility'">
+        <ng-container ngProjectAs="sectionContent">
+          In this example you can se how you can implement a group of chips so that they are accessible. The
+          classes used are fetched from elvis, but can easily be replicated without elvis. The aria-label prop
+          should be updated whenever a chip is selected or unselected.
+          <app-component-example-generator
+            [componentData]="chipAccessibilityCode"
+            [inlineExample]="true"
+          ></app-component-example-generator>
+        </ng-container>
+      </app-component-subsection>
     </ng-container>
   </app-component-section>
 
