updates after PR

--- a/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
@@ -16,7 +16,8 @@
       <app-component-subsection [sectionTitle]="'Icons'">
         <ng-container ngProjectAs="sectionContent">
           <div>
-            It's possible to display icons in the dropdown. Simply add a key value pair of 'icon : iconName'
+            It's possible to display icons in the dropdown. Simply add a key value pair of
+            <code class="code-text">icon: IconName</code>
             to the dropdown options to create icons aligned on the left side of the label text.
           </div>
           <div class="e-mt-16">
