Updated to match 8.2.1

--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
@@ -47,7 +47,7 @@
               <p [innerHTML]="change.description">{{ change }}</p>
               <ng-container *ngIf="change.fix">
                 <strong>How to fix</strong>
-                <p>{{ change.fix.description }}</p>
+                <p [innerHTML]="change.fix.description">{{ change.fix.description }}</p>
                 <ul>
                   <li *ngFor="let fix of change.fix.changes">test</li>
                 </ul>
