--- a/packages/web/src/app/doc-pages/components/chip-doc/chip-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/chip-doc/chip-doc.component.html
@@ -160,7 +160,7 @@
     <ng-container ngProjectAs="sectionContent">
       <app-component-subsection [sectionTitle]="'Accessibility'">
         <ng-container ngProjectAs="sectionContent">
-          In this example you can se how you can implement a group of chips so that they are accessible. The
+          In this example you can see how to implement a group of chips so that they are accessible. The
           classes used are fetched from elvis, but can easily be replicated without elvis. The aria-label prop
           should be updated whenever a chip is selected or unselected.
           <app-component-example-generator
