Alert - Added role to alerts

--- a/packages/web/src/app/shared/component-documentation/component-installation/component-installation.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-installation/component-installation.component.html
@@ -1,4 +1,4 @@
-<div class="e-alert e-alert--info">
+<div class="e-alert e-alert--info" role="alert">
   <div class="e-alert__icon">
     <i class="e-icon e-icon--information_circle e-icon--color-grey"></i>
   </div>
