--- a/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
+++ b/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
@@ -10,7 +10,7 @@
 <div class="page-body">
   <!--TEMPORARY WAY TO SHOW LIVE EXAMPLES BEFORE CODE-GENERATOR-->
   <div class="e-my-48" class="component-preview-temp component-preview-animation">
-    <div class="e-alert e-mt-24">
+    <div class="e-alert e-mt-24" role="alert">
       <div class="e-alert__icon">
         <i class="e-icon e-icon--remove_circle e-icon--color-red"></i>
       </div>
