--- a/packages/web/src/app/doc-pages/components/header-doc/header-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/header-doc/header-doc.component.html
@@ -20,7 +20,7 @@
     </button>
   </div>
   <div class="e-mt-72">
-    <div class="e-alert e-alert--local e-alert--info">
+    <div class="e-alert e-alert--local e-alert--info" role="alert">
       <div class="e-alert__icon">
         <i class="e-icon e-icon--information_circle"></i>
       </div>
