--- a/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
@@ -91,7 +91,7 @@
             </div>
           </div>
           <div class="e-accordion__content">
-            <div class="e-alert e-alert--local e-alert--warn e-mb-32">
+            <div class="e-alert e-alert--local e-alert--warn e-mb-32" role="alert">
               <div class="e-alert__icon">
                 <i class="e-icon e-icon--warning_circle e-icon--color-orange"></i>
               </div>
