--- a/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.html
@@ -13,7 +13,7 @@
     *ngFor="let icon of visibleIcons | iconSearchPipe: term"
     [id]="icon.title"
   >
-    <div class="e-alert e-alert--local e-alert--info">
+    <div class="e-alert e-alert--local e-alert--info" role="alert">
       <div class="e-alert__icon">
         <i class="e-icon" [ngClass]="'e-icon--' + icon.title"></i>
       </div>
